// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FollowControls (1) Default render. No active user. 1`] = `
Array [
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "marginRight": "5px",
      }
    }
    type="button"
  >
    Follow
  </button>,
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Mute
  </button>,
]
`;

exports[`FollowControls (2) Default Render with active account. 1`] = `
Array [
  <button
    className="btn btn-primary"
    disabled={true}
    style={
      Object {
        "marginRight": "5px",
      }
    }
    type="button"
  >
    Follow
  </button>,
  <button
    className="btn btn-primary"
    disabled={true}
    type="button"
  >
    Mute
  </button>,
]
`;

exports[`FollowControls (3) Following. 1`] = `
Array [
  <button
    className="btn btn-primary"
    disabled={true}
    style={
      Object {
        "marginRight": "5px",
      }
    }
    type="button"
  >
    Follow
  </button>,
  <button
    className="btn btn-primary"
    disabled={true}
    type="button"
  >
    Mute
  </button>,
]
`;

exports[`FollowControls (4) Muted. 1`] = `
Array [
  <button
    className="btn btn-primary"
    disabled={true}
    style={
      Object {
        "marginRight": "5px",
      }
    }
    type="button"
  >
    Follow
  </button>,
  <button
    className="btn btn-primary"
    disabled={true}
    type="button"
  >
    Mute
  </button>,
]
`;
